--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-DATABASE_URL=postgresql://user:password@localhost/dbname
-SECRET_KEY=my_secret_key
+# .env
+
+# Replace with a secure storage or environment variable
+PI_NETWORK_API_KEY=
+
+# Other environment variables...
