--- a/blockchain_integration/pi_network/pi-dapp/package.json
+++ b/blockchain_integration/pi_network/pi-dapp/package.json
@@ -1,11 +1,28 @@
 {
-    "name": "pi-dapp",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "node src/index.js"
-    },
-    "dependencies": {
-        "express": "^4.17.1",
-        "web3": "^1.3.4"
-    }
+  "name": "pi-dapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "ethers.js": "^5.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.7.4",
+    "web3": "^1.7.3"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.18"
+  },
+  "engines": {
+    "node": ">=16.13.0"
+  }
 }
