--- a/blockchain_integration/pi_network/DeFi/DAO/package.json
+++ b/blockchain_integration/pi_network/DeFi/DAO/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "advanced-high-tech-dao",
+  "name": "pi-nexus-autonomous-banking-network",
   "version": "1.0.0",
-  "description": "Advanced High-Tech DAO",
-  "main": "truffle-config.js",
+  "description": "Decentralized Autonomous Organization (DAO) for Pi Nexus Autonomous Banking Network",
+  "main": "index.js",
   "scripts": {
-    "test": "truffle test",
-    "compile": "truffle compile",
-    "migrate": "truffle migrate",
-    "deploy": "truffle deploy"
+    "test": "echo 'Error: no test specified' && exit 1",
+    "compile": "solcjs --bin --abi --include-path node_modules/ --base-path. -o.",
+    "deploy": "node deploy.js"
   },
   "keywords": [],
   "author": "KOSASIH",
   "license": "MIT",
   "dependencies": {
-    "truffle": "^5.3.0",
     "web3": "^1.3.4",
-    "ethers": "^5.4.0"
+    "solcjs": "^0.8.10",
+    "truffle-hdwallet-provider": "^1.4.0",
+    "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "ganache-cli": "^6.12.2"
   }
 }
