--- a/blockchain_integration/pi_network/app_registry/apps.json
+++ b/blockchain_integration/pi_network/app_registry/apps.json
@@ -9,12 +9,12 @@
       "contractAddress": "0x...PiTicketContractAddress..."
     },
     {
-      "id": "app2",
-      "name": "App 2",
-      "description": "App 2 description",
-      "icon": "app2_icon.png",
-      "url": "/app2",
-      "contractAddress": "0x...App2ContractAddress..."
+      "id": "PiGenesis",
+      "name": "PiGenesis",
+      "description": "PiGenesis is a decentralized banking application built on the Pi network blockchain. This application allows users to create and manage their own virtual bank, including the ability to issue their own currency, manage transactions, and monitor financial data.",
+      "icon": "PiGenesis_icon.png",
+      "url": "/pigenesis",
+      "contractAddress": "0x...PiGenesisContractAddress..."
     },
    ...
   ]
